--- a/pasion.html
+++ b/pasion.html
@@ -61,7 +61,7 @@
         </a>
 
 
-        <p>El Instituto de Mecánica Electrónica nos realiza una entrevista en el taller, en la cual contamos parte de nuestra trayectoria en el rubro de la mecánica como en las pistas.
+        <p>El Instituto de Mecánica Electrónica (I.M.E.) nos realiza una entrevista en el taller, en la cual contamos parte de nuestra trayectoria en el rubro de la mecánica como en las pistas.
             <br>
         Y más abajo, algunas de nuestras picadas en pistas profesiones.</p>
 
