--- a/trabajos.html
+++ b/trabajos.html
@@ -55,7 +55,7 @@
         <div class="container-fluid">
             <h1 class="titulostrabajos">Trabajos</h1>
 
-            <p>Realizamos múltiples trabajos dia a dia, con el afán de poder garantizar una experiencia reconfortadora hacia el cliente y sus preciados autos, aquí debajo una pequeña muestra de lo que hacemos. </p>
+            <p>Realizamos múltiples trabajos día a día, con el afán de poder garantizar una experiencia reconfortadora hacia el cliente y sus preciados autos, aquí debajo una pequeña muestra de lo que hacemos. </p>
         </div>
     </section>
     <a href="https://wa.link/7filxo" class="logowhatsapp">
