--- a/historia.html
+++ b/historia.html
@@ -61,9 +61,11 @@
             <img src="multimedia/instagram.png" width="40px">
         </a>
         <section class="section">
-            <p> "El Napo Performance", un taller mecánico con más de 15 años de trayectoria en la zona de Villa Bosch, partido de Tres de Febrero. Atendido por sus dueños, es el lugar de confianza que usted y su auto necesitan para poder despreocuparse y saber que su vehículo está en manos de profesionales con amplia experiencia en tanto en la zona como en el rubro.
+            <p> "El Napo Performance", un taller mecánico con más de 15 años de trayectoria en la zona de Villa Bosch, partido de Tres de Febrero.
+            <br>
+             Atendido por sus dueños, es el lugar de confianza que usted y su auto necesitan para poder despreocuparse y saber que su vehículo está en manos de profesionales con amplia experiencia en tanto en la zona como en el rubro.
                 
-            Trabajamos meticulosamente en cada detalle, para brindarle la mayor seguridad de que podrá viajar en un auto con las mejores condiciones de seguridad mecánica, quedándose una gran performance en la sensación de la conducción de su automovil. </p>
+            Trabajamos meticulosamente en cada detalle, para brindarle la mayor seguridad de que podrá viajar en un auto con las mejores condiciones de seguridad mecánica, quedándose una gran performance en la sensación de la conducción de su automóvil. </p>
 
             
 
