--- a/pasion.html
+++ b/pasion.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container-fluid">
         <div class="header">
-             <img src="multimedia/logo(1).png" id="index" width="250px" height="200px">
+             <a href="index.html" class="logo">EL NAPO PERFORMANCE</a>
                 <div class="menuuno">
                 <nav class="navbar navbar-expand-sm navbar-expand-lg navbar-dark bg-black">
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-label="navigation">
