--- a/trabajos.html
+++ b/trabajos.html
@@ -77,7 +77,7 @@
                 <img src="multimedia/imagen1.jpg" class="img-fluid imagenestrabajo" width="300" height="300">
 
 
-                <img src="multimedia/imagen2.jpg" class="img-fluid imagenestrabajo" height="300">
+                <img src="multimedia/imagen2.jpg" class="img-fluid imagenestrabajo" width="300" height="300">
 
 
                 <img src="multimedia/imagen3.jpg" class="img-fluid imagenestrabajo" width="300" height="300">
