Cambios en mapa

--- a/comollegar.html
+++ b/comollegar.html
@@ -64,11 +64,12 @@
             </p>
         </section>
     </div>
-        <div class="container-fluid mapa">
+        <div class="container-fluid">
+            <div class="embed-container">
                     
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.795799516333!2d-58.58720286942667!3d-34.5840331114357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9ba515032a5%3A0xff341ed67ef1b749!2sCampo%20de%20Mayo%206811%2C%20B1683%20Villa%20Bosch%2C%20Provincia%20de%20Buenos%20Aires%2C%20Argentina!5e0!3m2!1ses-419!2sbr!4v1598065930624!5m2!1ses-419!2sbr"
-                        width="275" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.7947830840576!2d-58.58549108437975!3d-34.58405882690528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9ba515032a5%3A0xff341ed67ef1b749!2sCampo%20de%20Mayo%206811%2C%20B1683%20Villa%20Bosch%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1600917296064!5m2!1ses-419!2sar" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
+            </div>
 <p>Podés ingresar haciendo click <a href="https://goo.gl/maps/MCSWaALmwhyGQtAz8">Aquí</a></p>
 
 
