agregado de google

--- a/comollegar.html
+++ b/comollegar.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <script data-ad-client="ca-pub-3435152457107215" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="description" content="El Napo Performance, un taller mecánico con más de 15 años de trayectoria en la zona de Villa Bosch, partido de Tres de Febrero atendido por sus dueños, es el lugar de confianza que usted, y su auto necesitan para poder despreocuparse y saber que su vehículo esta en manos de profesionales con amplia trayectoria en tanto en la zona como en el rubro">
     <meta name="keywords" content="taller mecanico, taller, mecanico, el, napo, performance, El Napo Performance, santos, vega, villa, bosch, tres, de, febrero, coronado, mecanica, san lorenzo, motor, autos, freno, alineacion, balanceo, general, ruleman, buje, picadas, autodromo">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
