--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
        <section class="section">
             <p>BIENVENIDOS a "El Napo Performance". Un taller mecánico, cuya actividad principal es la reparación del vehículo automotor en general. Trabajamos bajo tradiciones familiares donde los valores que más resaltamos son la transparencia con el cliente y la garantía de satisfacción con el usuario.
                 <br>
-            Realizamos trabajos de mecánica en general:</p>
+            Realizamos trabajos de Mecánica en General:</p>
             <ul>
                 <li>Alineación</li>
                 <li>Balanceo</li>
