[FEATURE] Se reordenan carpetas y se renombran archivos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Napo-Inicio</title>
 </head>
@@ -32,17 +32,17 @@
                                 <a class="nav-link active" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link active" href="comollegar.html">¿Cómo Llegar?</a>
+                                <a class="nav-link active" href="pages/como_llegar.html">¿Cómo Llegar?</a>
                             </li>
                             
                             <li class="nav-item">
-                                <a class="nav-link active" href="trabajos.html">Trabajos</a>
+                                <a class="nav-link active" href="pages/trabajos.html">Trabajos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="historia.html">Historia</a>
+                                <a class="nav-link active" href="pages/historia.html">Historia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="pasion.html">Pasión</a>
+                                <a class="nav-link active" href="pages/pasion.html">Pasión</a>
                             </li>
                         </ul>
                     </div>
